--- a/POSales/POSales/Record.resx
+++ b/POSales/POSales/Record.resx
@@ -118,6 +118,24 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAuhJREFUSEvt
+        ll9ojWEcx48tZ9oOZVdjdSQuZHGh7YpC0dzIxbiQlNBMSomh7MrFajdSQrvUXJgLlFKkKCI20wpJyf5Q
+        EupstuH88/k+/c7OOe/OjnO8ryu+9e33PL8/39/7Pu/zPOeECiGdTs+Fa5PJZAfshQPwM/zq4atUKnUD
+        2xmPx5upqTGJ8kDhKkQuwC9wKpFIPMCehQcR3gI35XAz8b3Eumh+CxuDk/CK4iZZHDSMUNAD47AXwa34
+        qixcEsivhOuo14NPoHGfedTCM0GwhsR++Ixxg7l9AZ1FrMJ1ND8wXmbufBA8BwdJiJgrEKBXga5W76G5
+        8kEgRtIumwYKdJfSHFPgrS1wzKaBAt2o6TebKwsF4BuC880VCNCrRFdHUY0bzZ2FNX4BX5LQZG5fQGcJ
+        m+s2mqNFGwNdFjoGPym4GsBxmkTnJvM605+1sQtgG5hfhH4vkI1OHDAv2ni9TR2YT1+ZWgFs5sr8oXyY
+        gCVdmcr36jsoAP/val9A5x/e1cSuoVtn0yxIVOO/tqtnhQkFtqtpHkavjdXow7p/KoyfYlv1QpY23TiQ
+        XY1GPVrP4Qhs1+cQGR+H72E/OYtdMpNAdjW189AYZOnvFHoJfAuI3SVngHE4841972pqj8B31M34zvj0
+        p+A0djlWq3E407jsXU1su0iN+26M9U3bNfYCfzccIlfH6wS5j+WcwFHurpb9CPV53FFhPM4DbdAYm/sj
+        cQB+I2+N5ooxj+lJ7zE477J8QI31AlDLqfN8Ge0W7HfsNkvLNB7T2zUqCDsYV1i8bCD+BI2TGqOzmvFr
+        qNU56hIMzE+R+8hN9KQ4PuHo0/f7kweg/hAcptZtLmwEvX0uaJCPHB2rNnM5Zy2OM3DMgt0U7sa/EoYt
+        LQ/458AoXAGrqCn9OHmBs5qGO0m4BLX1tVy6IofhWw+noOJDVlv6BfI7kLgQNvEwLXAPxa3Y/XAHfm2m
+        ekt1YJ57ZWrvaHN5rsxQ6BdeKKEkk5nbYwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="label1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAuhJREFUSEvt
